--- a/.github/workflows/newman.yaml
+++ b/.github/workflows/newman.yaml
@@ -7,8 +7,6 @@ on:
 jobs:
   newman:
     runs-on: ubuntu-latest
-     env:
-      APIURL: http://localhost:3000/api
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -24,4 +22,6 @@ jobs:
 
       - name: E2E Tests
         if: contains(github.event_name, 'push')
-        run ./run-api-tests.sh
+        run: ./run-api-tests.sh
+        env:
+          APIURL: http://localhost:3000/api
