--- a/.github/workflows/newman.yaml
+++ b/.github/workflows/newman.yaml
@@ -40,6 +40,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Run Application
+        run: yarn build && yarn start:prod &
+
       - name: newman install
         run: sudo npm install -g newman
 
